--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/codemirror-theme-dracula": "^4.21.13",
     "@uiw/react-codemirror": "^4.21.13",
+    "ace-builds": "^1.28.0",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^5.3.4",
